Changed Custom Post Type "Gallery" to "Slider Gallery" to be more meaningfull. Created helper functions to save or update Custom Field "Order". Applyed Sortable, jQuery UI function, to trigger the mentioned functions. Theres still work to do, the CPT List, must be ordered by Metafield "Order".

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -25,4 +25,18 @@
 	text-decoration: underline;
 	color: black;
 }
-	
+.o-mv-up,
+.o-mv-down {
+	width:25px;
+	height:25px;
+	display:block;
+	text-indent:-9999px;
+	float:left;
+}
+.cpt-o-pos {
+	border:1px solid #BBB;
+	background: #EEE;
+	color:#888;
+	width:20px;
+	text-align:center;
+}
